--- a/README.org
+++ b/README.org
@@ -1,3 +1,12 @@
+#+TITLE:   Doom Config
+#+DATE:    Giugno 5, 2022
+#+SINCE:   <replace with next tagged release version>
+#+STARTUP: inlineimages nofold
+#+PROPERTY: header-args :tangle config.el
+
+* Basic config
+** Defaults
+#+begin_src emacs-lisp
 ;; Some functionality uses this to identify you, e.g. GPG configuration, email
 ;; clients, file templates and snippets.
 (setq user-full-name "samoorai"
@@ -30,8 +39,14 @@
                     :cond #'laas-object-on-left-condition
                     "qq" (lambda () (interactive) (laas-wrap-previous-object "sqrt"))))
 
+#+end_src
+** My customs
+For the theme, the font and to start emacs maximized
+
+#+begin_src emacs-lisp
 (setq doom-font (font-spec :family "Fira Code" :size 16 :weight 'medium))
 
 (setq doom-theme 'doom-one-light)
 
 (add-to-list 'initial-frame-alist '(fullscreen . maximized))
+#+end_src
