--- a/README.org
+++ b/README.org
@@ -38,15 +38,19 @@
                     "qq" (lambda () (interactive) (laas-wrap-previous-object "sqrt"))))
 
 #+end_src
-** My customs
-For the theme, the font and to start emacs maximized
+*** Look and feel
 
 #+begin_src emacs-lisp
-(setq org-directory "~/Nextcloud/Documents/org")
 
 (setq doom-font (font-spec :family "Fira Code" :size 16 :weight 'medium))
 
 (setq doom-theme 'doom-one-light)
 
 (add-to-list 'initial-frame-alist '(fullscreen . maximized))
+#+end_src
+*** Directories
+#+begin_src emacs-lisp
+(setq org-directory "~/Nextcloud/Documents/org")
+(setq org-roam-dailies-direcotry "journal/")
+
 #+end_src
